--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
         <p>3. After scanning, open <code>securiscan_report.html</code> in your browser to see results.</p>
 
         <div class="footer">
-            <p>Created with by <strong>Han Le</strong> | © 2025</p>
+            <p>Created by <strong>Han Le</strong> | © 2025</p>
         </div>
     </div>
 </body>
