--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SecuriScan</title>
+    <title>SafePort</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
